<resources>
    <string name="app_name">PassGen</string>
    <string name="NombreTag">Introduce nombre de la cuenta:</string>
    <string name="FiltroTag">Introduce categoria:</string>
    <string name="GenerarButton">GENERAR CONTRASEÑA</string>
    <string name="cuentaTexto">Cuenta</string>
    <string name="contraseniaTxt">Categoría</string>
    <string name="filtroTxt">Contraseña</string>
    <string name="Boton_guardar">Guardar</string>
    <string name="categoria_txt">Categoría:</string>
    <string name="contras_txt">Contraseña:</string>
    <string name="cuenta_txt">Cuenta:</string>
    <string name="titulo_img">titulo</string>
    <string name="subtitulo_splash" translatable="false">MADE BY ALX</string>
    <string name="tV_Eliminar">ELIMINAR ?</string>
</resources>
