<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:selectableItemBackground"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/dimensionesRelative"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tV_Cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cuentaTexto"
            />
        <TextView
            android:id="@+id/tv_Filtro"
            android:layout_width="wrap_content"
            android:layout_below="@id/tV_Cuenta"
            android:layout_height="wrap_content"
            android:text="@string/filtroTxt"
            />
        <TextView
            android:id="@+id/tV_Contrasenia"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_Filtro"
            android:layout_height="wrap_content"
            android:text="@string/contraseniaTxt" />


    </RelativeLayout>



</android.support.v7.widget.CardView>
